bootstrap/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  containers:
    - name: hello-world
      image: gcr.io/google-samples/hello-app:1.0
      ports:
        - containerPort: 8080
